2025-09-03 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCast.c,
	  device/include/stdbit.h,
	  support/regression/tests/load8.c.in,
	  support/regression/tests/store8.c.in
	  support/regression/tests/rotate_left.c.in:
	  Fix bug #3874. Enable all stdbit.h functions for all ports.

2025-09-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCast.c,
	  src/SDCC.lex,
	  src/SDCC.y,
	  src/SDCCglue.c,
	  src/SDCCmem.c,
	  device/include/stdbit.h,
	  support/regression/tests/rotate_left.c.in,
	  support/regression/tests/rotate_right.c.in,
	  .version,
	  doc/sdccman.lyx:
	  Partial fix for bug #3874. Good enough to enable the stdbit.h rotation functions for all ports, and replace __builtin_rot.

2025-09-02 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/gen.c:
	  Fix two codegen issues that affected a recently introduced test for stdbit.h functions.
	* src/pdk/gen.c:
	  Fix a codegen issue triggered by recently introduced rotation optimization improvements.
	* src/ds390/main.c,
	  src/mos6502/main.c:
	  Fix incorrect announcement of support for rotations of arbitrary _BitInt types.
	* support/regression/tests/bug-3873.c:
	  Disable recently added test for mcs51, where it fails due to known bug #3875.

2025-09-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCast.c,
	  src/SDCCicode.c,
	  src/SDCCopt.c:
	  Replace AST-based rotation optimization by iCode-based one that works better for inlined functions.
	* device/include/stdbit.h:
	  Use built-in memcpy for stdbit.h memory reversal and endian-aware loads and stores.

2025-09-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* device/include/stdbit.h,
	  device/lib/incl.mk,
	  device/lib/stdc_load8.c,
	  device/lib/stdc_memreverse8.c,
	  device/lib/stdc_memreverse8u.c,
	  device/lib/stdc_store8.c,
	  support/regression/tests/bit_floor.c.in,
	  support/regression/tests/bit_width.c.in,
	  support/regression/tests/load8.c.in,
	  support/regression/tests/memreverse8.c,